--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <div id="app">
         <!-- hardcore radio -->
         <div class="radio">
-        <h2>Hardcore Radio</h2>
-            <audio id="hardcorePlayer" controls>
-                <source src="song2.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
+            <h2>Hardcore Radio</h2>
+            <audio id="hardcorePlayer" controls></audio>
+            <p id="nowPlaying"></p>
         </div>
 
 
@@ -68,3 +66,4 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
