--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="radio">
             <h2>Rock Radio</h2>
             <audio controls>
-                <source src="https://www.youtube.com/watch?v=2b4a1b4a4b4" type="audio/mpeg">
+                <source src="https://streams.ilovemusic.de/iloveradio1.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
@@ -66,4 +66,3 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
-
