--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alt1 trekz fisrt script</title>
+    <title>Alt1 radio script</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,6 @@
             <h2>Alt1 Radio</h2>
             <audio controls>
                 <source src="https://streams.ilovemusic.de/iloveradio1.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
             </audio>
         </div>
 
@@ -23,7 +22,6 @@
             <h2>Hardcore Radio</h2>
             <audio controls>
                 <source src="https://harder-high.rautemusik.fm/" type="audio/mpeg">
-                Your browser does not support the audio element.
             </audio>
         </div>
 
@@ -31,7 +29,6 @@
             <h2>Rock Radio</h2>
             <audio controls>
                 <source src="http://streams.radiobob.de/bob-rockhits/mp3-192" type="audio/mpeg">
-                Your browser does not support the audio element.
             </audio>
         </div>
    
@@ -39,7 +36,6 @@
             <h2>Techno Underground</h2>
             <audio controls>
                 <source src="https://sunsl.streamabc.net/sunsl_w4pk5n9ou_0dfk-mp3-192-4232604?sABC=68n4064s%230%23qo83s408q0941pnns018388n0rn0nops%23fgernz.fhafuvar-yvir.qr&aw_0_1st.playerid=stream.sunshine-live.de&amsparams=playerid:stream.sunshine-live.de;skey:1755579983" type="audio/mpeg">
-                Your browser does not support the audio element.
             </audio>
         </div>
  
@@ -48,7 +44,6 @@
             <h2>Rap Radio</h2>
             <audio controls>
                 <source src="https://stream-175.zeno.fm/9h35skerrkeuv" type="audio/mpeg">
-                Your browser does not support the audio element.
             </audio>
         </div>
 
